# Akizuki

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  Akizuki.sln.DotSettings  Akizuki.slnx  Cargo.toml  README.md
Akizuki/: Akizuki.csproj  AkizukiLog.cs  Extensions.cs  Globals.cs  MethodConstants.cs  ResourceManager.cs
Akizuki.Conversion/: Akizuki.Conversion.csproj  ArmorConverter.cs  AssetConverter.cs  AssetPaths.cs  Assets.cs  ColorTheory.cs  GeometryConverter.cs  Globals.cs  IConversionOptions.cs  JsonOptions.cs  SpaceConverter.cs  TextureConverter.cs  TextureFormat.cs
Akizuki.Conversion/Resources/: FlipAllowList.txt  FlipBlockList.txt  MaterialRewrite.txt  MiscBlockList.txt
Akizuki.Conversion/Utility/: ColorTheory.cs  IConversionOptions.cs  JsonOptions.cs  ModelBuilderContext.cs  TextureFormat.cs
Akizuki.Ship/: Akizuki.Ship.csproj  Program.cs  ProgramFlags.cs
Akizuki.Unpack/: Akizuki.Unpack.csproj  Program.cs  ProgramFlags.cs
Akizuki.Unpack/Conversion/: AssetPaths.cs  Assets.cs  ColorTheory.cs  GeometryConverter.cs  SpaceConverter.cs
Akizuki.Unpack/Conversion/Space/: TerrainConverter.cs
Akizuki/Data/: BigWorldDatabase.cs  BigWorldTable.cs  CamouflageData.cs  MessageObject.cs  PackageFileSystem.cs  PickledData.cs
Akizuki/Data/Params/: ParamsObject.cs  ShipParam.cs  ShipUpgrade.cs  ShipUpgradeInfo.cs  ShipUpgradeType.cs  TypeInfo.cs
Akizuki/Data/Tables/: AnimationCurvePrototype.Version.cs  AnimationCurvePrototype.cs  AtlasContourPrototype.Version.cs  AtlasContourPrototype.cs  DyePrototype.Version.cs  DyePrototype.cs  EffectMetadataPrototype.Version.cs  EffectMetadataPrototype.cs  EffectPresetPrototype.Version.cs  EffectPresetPrototype.cs  EffectPrototype.Version.cs  EffectPrototype.cs  IPrototype.cs  LODPrototype.Version.cs  LODPrototype.cs  MaterialPrototype.Version.cs  MaterialPrototype.cs  ModelPrototype.Version.cs  ModelPrototype.cs  PointLightPrototype.Version.cs  PointLightPrototype.cs  RenderSetPrototype.Version.cs  RenderSetPrototype.cs  SkeletonPrototype.Version.cs  SkeletonPrototype.cs  VelocityFieldPrototype.Version.cs  VelocityFieldPrototype.cs  VisualPrototype.Version.cs  VisualPrototype.cs
Akizuki/Exceptions/: CorruptDataException.cs
Akizuki/Graphics/: DDSTexture.cs  Geometry.cs  GeometryArmor.cs  GeometryArmorPlate.cs  GeometryIndexBuffer.cs  GeometryVertexBuffer.cs  Splash.cs
Akizuki/Graphics/MeshCompression/: MeshOptimizerIndexDecoder.cs  MeshOptimizerVertexDecoder.Simd.cs  MeshOptimizerVertexDecoder.cs
Akizuki/Json/: JsonBigWorldDatabaseConverter.cs  JsonFauxDictionaryFactory.cs  JsonPackageFileSystemConverter.cs  JsonResourceIdConverter.cs  JsonStringIdConverter.cs
Akizuki/Json/Silk/: JsonFauxDictionaryFactory.cs  JsonMatrix4X4ConverterFactory.cs  JsonVector2DConverterFactory.cs  JsonVector3DConverterFactory.cs  JsonVector4DConverterFactory.cs
Akizuki/PFS/: PFSArchive.cs
Akizuki/Resources/: FlipBlockList.txt  MiscBlockList.txt
Akizuki/Space/: CompiledTerrain.cs
Akizuki/Structs/Data/: BWDBDatabaseHeader.cs  BWDBDictionary.cs  BWDBDictionaryKey.cs  BWDBFieldKind.cs  BWDBFieldType.cs  BWDBFileName.cs  BWDBHeader.cs  BWDBTableHeader.cs  BWFileHeader.cs  BWPrototypeInfo.cs  BWPrototypeRef.cs  MOHeader.cs  MOStringEntry.cs  PFSCompressionType.cs  PFSDataStream.cs  PFSFile.cs  PFSFileFlags.cs  PFSFileName.cs  PFSIndexHeader.cs  PFSNamedId.cs  ResourceId.cs  StringId.cs
Akizuki/Structs/Data/Camouflage/: Camouflage.cs  CamouflageColorScheme.cs  CamouflageData.cs  CamouflagePart.cs  CamouflageShader.cs  CamouflageShipGroup.cs  CamouflageTexture.cs
Akizuki/Structs/Data/Tables/: AnimationCurveHeader.cs  BoundingBox.cs  BoundingBox16.cs  CurveHeader.cs  CurvePoint.cs  DyePrototypeHeader.cs  EffectMetaPrototype.cs  EffectMetadataPrototypeHeader.cs  LODPrototypeHeader.cs  MaterialPropertyId.cs  MaterialPropertyType.cs  MaterialPrototypeHeader.cs  ModelMiscType.cs  ModelPrototypeHeader.cs  PointLightPrototypeHeader.cs  RenderSetPrototypeHeader.cs  SkeletonPrototypeHeader.cs  VelocityFieldPrototypeHeader.cs  VisualPrototypeHeader.cs
Akizuki/Structs/Graphics/: BWImageFormat.cs  BoundingBox.cs  D3DFORMAT.cs  DDSCaps.cs  DDSCaps2.cs  DDSFlags.cs  DDSHeader.cs  DDSPixelFormat.cs  DDSPixelFormatFlags.cs  DX10AlphaMode.cs  DX10Flags.cs  DX10Header.cs  DXGIFormat.cs  DXGIResourceDimension.cs  GeometryArmorHeader.cs  GeometryArmorPlateHeader.cs  GeometryArmorVertex.cs  GeometryHeader.cs  GeometryIndexBufferHeader.cs  GeometryName.cs  GeometrySimpleBufferHeader.cs  GeometryVertexBufferHeader.cs
Akizuki/Structs/Graphics/VertexFormat/: IBoneVertex.cs  IColorVertex.cs  IIdVertex.cs  IRadiusVertex.cs  IStandardVertex.cs  ITangentVertex.cs  IUV2Vertex.cs  VertexFormatXYZNUV.cs  VertexFormatXYZNUV2IIIWWTB.cs  VertexFormatXYZNUV2TB.cs  VertexFormatXYZNUV2TBI.cs  VertexFormatXYZNUVIIIWW.cs  VertexFormatXYZNUVIIIWWR.cs  VertexFormatXYZNUVIIIWWTB.cs  VertexFormatXYZNUVR.cs  VertexFormatXYZNUVTB.cs  VertexFormatXYZNUVTBI.cs  VertexFormatXYZNUVTBOI.cs  VertexHelper.cs  VertexInfo.cs
Akizuki/Structs/PFS/: PFSCompressionType.cs  PFSFile.cs  PFSFileFlags.cs  PFSFileName.cs  PFSIndexHeader.cs  PFSIndexInfo.cs  PFSNamedId.cs
Akizuki/Structs/Space/: CompiledTerrainHeader.cs
akizuki/: Cargo.toml
akizuki/src/: bigworld.rs  bin_wrap.rs  error.rs  identifiers.rs  lib.rs  macros.rs  manager.rs  pfs.rs
akizuki/src/format/: bigworld.rs  bigworld_data.rs  bigworld_table.rs  mod.rs  oodle.rs  pfs.rs
akizuki/src/table/: material.rs  mod.rs  model.rs  visual.rs
akizuki/src/table/v14/: material.rs  mod.rs  model.rs  visual.rs
akizuki_cli/: Cargo.toml
akizuki_cli/src/: lib.rs
akizuki_common/: Cargo.toml
akizuki_common/src/: lib.rs  mmh3.rs
akizuki_macro/: Cargo.toml
akizuki_macro/src/: lib.rs
cli/ship/: Cargo.toml
cli/unpack/: Cargo.toml
cli/unpack/src/: asset.rs  db.rs  index.rs  main.rs
cli/versions/: Cargo.toml
cli/versions/src/: main.rs
versions/: versions_mk.json  versions_wg.json  versions_wg.json.license
