# SPDX-FileCopyrightText: 2025 Legiayayana
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "akizuki"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.14.1"
bytemuck = "1.22.0"
cityhasher = "0.1.0"
colored = "2.2.0"
crc = "3.2.1"
flate2 = "1.0"
four-char-code = "2.3.0"
gettext = "0.4.0"
glam = "0.30.1"
half = "2.5.0"
log = "0.4.27"
memmap2 = "0.9.5"
meshopt = "0.4.1"
once_cell = "1.21.3"
serde = "1.0.219"
serde-pickle = "1.2.0"
xml = "0.8.20"

# geometry
gltf = { version = "1.4.1", features = ["extensions", "extras", "names", "KHR_texture_transform"], optional = true }

# texture
bcdec_rs = { version = "0.2.0", optional = true }
png = { version = "0.17.16", optional = true }
tiff = { version = "0.9.1", optional = true }

[features]
geometry = ["gltf"]
texture = ["bcdec_rs", "png", "tiff"]
art = ["texture", "geometry"]
