# SPDX-FileCopyrightText: 2025 Legiayayana
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "akizuki"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.14.1"
bytemuck = "1.22.0"
cityhasher = "0.1.0"
colored = "2.2.0"
crc = "3.2.1"
flate2 = "1.0"
four-char-code = "2.3.0"
log = "0.4.27"
memmap2 = "0.9.5"
once_cell = "1.21.3"
dlopen2 = "0.7.0"

# locale
gettext = { version = "0.4.0", optional = true }

# data
glam = { version = "0.30.1", optional = true }
serde = { version = "1.0.219", optional = true }
serde-pickle = { version = "1.2.0", optional = true }
xml = { version = "0.8.20", optional = true }

# geometry
gltf = { version = "1.4.1", features = ["extensions", "extras", "names", "KHR_texture_transform"], optional = true }
half = { version = "2.5.0", optional = true }
meshopt = { version = "0.4.1", optional = true }

# texture
bcdec_rs = { version = "0.2.0", optional = true }
image = { version = "0.25.6", optional = true }

[features]
geometry = ["glam", "gltf", "half", "meshopt"]
texture = ["bcdec_rs", "image"]
locale = ["gettext"]
data = ["glam", "serde", "serde-pickle", "xml"]

art = ["texture", "geometry"]
default = ["art", "data", "locale"]
