# SPDX-FileCopyrightText: 2025 Legiayayana
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "akizuki_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
akizuki_common= { path = "../akizuki_common" }

syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"