# SPDX-FileCopyrightText: 2025 Legiayayana
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "akizuki-unpack"
version = "0.1.0"
edition = "2024"
authors = ["Legiayayana"]
license = "EUPL-1.2"

[dependencies]
akizuki = { path = "../../akizuki" }

anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
colog = "1.3.0"
colored = "2.2.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"