# SPDX-FileCopyrightText: 2025 Legiayayana
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "akizuki-unpack"
version = "0.1.0"
edition = "2024"
authors = ["Legiayayana"]
license = "EUPL-1.2"

[dependencies]
akizuki = { path = "../../akizuki" }
akizuki_cli = { path = "../../akizuki_cli" }

anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.140"
log = "0.4.27"
