# SPDX-FileCopyrightText: 2025 Legiayayana
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "akizuki-versions"
version = "0.1.0"
edition = "2024"
authors = ["Legiayayana"]
license = "EUPL-1.2"

[dependencies]
akizuki = { path = "../../akizuki" }
akizuki_cli = { path = "../../akizuki_cli" }

log = "0.4.27"
pelite = "0.10.0"
walkdir = "2.5.0"