# SPDX-FileCopyrightText: 2025 Legiayayana
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "akizuki-versions"
version = "0.1.0"
edition = "2024"
authors = ["Legiayayana"]
license = "EUPL-1.2"

[dependencies]
akizuki = { path = "../../akizuki" }
akizuki_cli = { path = "../../akizuki_cli" }
akizuki_macro = { path = "../../akizuki_macro" }

log = "0.4.27"
pelite = "0.10.0"
walkdir = "2.5.0"
semver = { version = "1.0.26", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"